--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,13 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
+spring.h2.console.enabled=true
+
+spring.thymeleaf.cache=false
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=ADMIN
