--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,13 @@ logging.level.org.springframework.web=DEBUG
 spring.security.user.name=admin
 spring.security.user.password=admin
 spring.security.user.roles=ADMIN
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.messages.basename=messages # ?????? ?? ????? messages.properties
+
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+server.port=8080
